[package]
name          = "error-ext"
version       = "0.2.3"
edition       = "2024"
description   = "Error utilities."
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license-file  = "LICENSE"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/error-ext"
repository    = "https://github.com/hseeberger/error-ext"
documentation = "https://docs.rs/error-ext/latest/error-ext"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[dependencies]
axum   = { version = "0.8", optional = true }
utoipa = { version = "5.3", features = [ "axum_extras" ], optional = true }

[dev-dependencies]
anyhow    = { version = "1.0" }
thiserror = { version = "2.0" }

[features]
axum   = [ "dep:axum" ]
utoipa = [ "axum", "dep:utoipa" ]
