[package]
name          = "error-ext"
version       = "0.4.0"
description   = "Error utilities"
edition       = "2024"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license-file  = "LICENSE"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/error-ext"
repository    = "https://github.com/hseeberger/error-ext"
documentation = "https://docs.rs/error-ext/latest/error_ext/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[dependencies]
axum   = { version = "0.8", optional = true }
utoipa = { version = "5.4", features = [ "axum_extras" ], optional = true }

[dev-dependencies]
anyhow    = { version = "1.0" }
thiserror = { version = "2.0" }

[features]
axum        = [ "dep:axum" ]
axum-utoipa = [ "axum", "dep:utoipa" ]
