[package]
name          = "error-ext"
description   = "Error utilities"
version       = "0.4.5"
edition       = "2024"
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/error-ext"
repository    = "https://github.com/hseeberger/error-ext"
documentation = "https://docs.rs/error-ext/latest/error_ext/"
publish       = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[dependencies]
axum   = { version = "0.8", optional = true }
utoipa = { version = "5.5", features = [ "axum_extras" ], optional = true }

[dev-dependencies]
anyhow    = { version = "1.0" }
thiserror = { version = "2.0" }

[features]
axum        = [ "dep:axum" ]
axum-utoipa = [ "axum", "dep:utoipa" ]
